math-core/tests/snapshots/wiki_test__wiki074.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\therefore, \\because, \\And"
---
<math>
    <mo lspace="0" rspace="0">∴</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">∵</mo>
    <mo>,</mo>
    <mspace width="0.2777778em"/>
    <mo lspace="0" rspace="0.2778em">&</mo>
    <mspace width="0.2777778em"/>
</math>
