math-core/tests/snapshots/wiki_test__wiki075.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\lor \\vee, \\curlyvee, \\bigvee"
---
<math>
    <mo lspace="0" rspace="0">∨</mo>
    <mo lspace="0" rspace="0">∨</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋎</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋁</mo>
</math>
