math-core/tests/snapshots/wiki_test__wiki076.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\land \\wedge, \\curlywedge, \\bigwedge"
---
<math>
    <mo>∧</mo>
    <mo lspace="0">∧</mo>
    <mo>,</mo>
    <mo>⋏</mo>
    <mo>,</mo>
    <mo>⋀</mo>
</math>
