math-core/tests/snapshots/wiki_test__wiki078.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\vdash \\dashv, \\vDash, \\Vdash, \\models"
---
<math>
    <mo>⊢</mo>
    <mo>⊣</mo>
    <mo>,</mo>
    <mo>⊨</mo>
    <mo>,</mo>
    <mo>⊩</mo>
    <mo>,</mo>
    <mo>⊨</mo>
</math>
