math-core/tests/snapshots/wiki_test__wiki079.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\Vvdash \\nvdash \\nVdash \\nvDash \\nVDash"
---
<math>
    <mo lspace="0" rspace="0">⊪</mo>
    <mo lspace="0" rspace="0">⊬</mo>
    <mo lspace="0" rspace="0">⊮</mo>
    <mo lspace="0" rspace="0">⊭</mo>
    <mo lspace="0">⊯</mo>
</math>
