math-core/tests/snapshots/wiki_test__wiki082.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\Rightarrow, \\nRightarrow, \\Longrightarrow, \\implies"
---
<math>
    <mo lspace="0">⇒</mo>
    <mo>,</mo>
    <mo>⇏</mo>
    <mo>,</mo>
    <mo>⟹</mo>
    <mo>,</mo>
    <mrow>
        <mspace width="0.2777778em"/>
        <mo>⟹</mo>
        <mspace width="0.2777778em"/>
    </mrow>
</math>
