math-core/tests/snapshots/wiki_test__wiki083.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\Leftarrow, \\nLeftarrow, \\Longleftarrow"
---
<math>
    <mo>⇐</mo>
    <mo>,</mo>
    <mo>⇍</mo>
    <mo>,</mo>
    <mo>⟸</mo>
</math>
