math-core/tests/snapshots/wiki_test__wiki084.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\Leftrightarrow, \\nLeftrightarrow, \\Longleftrightarrow, \\iff"
---
<math>
    <mo lspace="0" rspace="0">⇔</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⇎</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⟺</mo>
    <mo>,</mo>
    <mrow>
        <mspace width="0.2777778em"/>
        <mo>⟺</mo>
        <mspace width="0.2777778em"/>
    </mrow>
</math>
