math-core/tests/snapshots/wiki_test__wiki086.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\rightarrow \\to, \\nrightarrow, \\longrightarrow"
---
<math>
    <mo rspace="0">→</mo>
    <mo lspace="0">→</mo>
    <mo>,</mo>
    <mo>↛</mo>
    <mo>,</mo>
    <mo>⟶</mo>
</math>
